--- a/todo-api/src/TodoApi.Api/appsettings.Development.json
+++ b/todo-api/src/TodoApi.Api/appsettings.Development.json
@@ -8,5 +8,10 @@
   "Api": {
     "Host": "localhost",
     "Port": 5121
+  },
+  "Cors": {
+    "AllowedOrigins": [
+      "http://localhost:3000"
+    ]
   }
 }
