--- a/todo-api/src/TodoApi.Api/appsettings.json
+++ b/todo-api/src/TodoApi.Api/appsettings.json
@@ -9,5 +9,10 @@
   "Api": {
     "Host": "localhost",
     "Port": 5121
+  },
+  "Cors": {
+    "AllowedOrigins": [
+      "http://localhost:3000"
+    ]
   }
 }
