--- a/todo-client/.env.example
+++ b/todo-client/.env.example
@@ -1,6 +1,6 @@
 VITE_API_HOST=localhost
 VITE_API_PORT=5121
-VITE_API_BASE_URL=http://localhost:5121/api/todo
+VITE_API_BASE_URL=http://localhost:5121/api
 VITE_API_BATCH_SIZE=100
 VITE_UI_HOST=localhost
 VITE_UI_PORT=3000
